Add Windows make file