@@ -47,4 +47,16 @@ java --class-path "code" \
 	--add-modules javafx.web       \
 	Start
 
+javac --class-path "code"      ^
+--module-path "javafx\lib"     ^
+--add-modules javafx.controls  ^
+--add-modules javafx.web       ^
+code\Start.java
+
+java --class-path "code"       ^
+--module-path "javafx\lib"     ^
+--add-modules javafx.controls  ^
+--add-modules javafx.web       ^
+Start
+
 */
